# currency-averages

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
currency_averages/: config.py  currencies.py  main.py  orchestrator.py  toolkit.py  web_extractor.py
tests/: test_currency_averages.py
